2010-12-17	Joel Sherrill <joel.sherrill@oarcorp.com>
		Jennifer Averett <jennifer.averett@oarcorp.com>

	Add RTEMS Scheduler Simulator.
	* sapi/include/confdefs.h: This adds some simple conditional
	logic to disable portions of the configuration that are NOT supported
	when configuring an RTEMS instance for use with a Scheduler Simulator
	instance. 

2010-12-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libmisc/cpuuse/cpuusagereport.c: We have to take the time since the
	last context switch before the uptime.

2010-12-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* score/src/watchdognanoseconds.c: New file.
	* score/Makefile.am: Reflect change above.
	* score/include/rtems/score/watchdog.h, score/src/coretodget.c,
	score/src/coretodgetuptime.c: Do not allow NULL as nanoseconds since
	last tick handler pointer.

2010-12-08	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libnetworking/loop.h, libnetworking/net/if_loop.c,
	libnetworking/rtems/rtems_glue.c, libmisc/dummy/dummy-networking.c:
	Initialize loop back interface during normal initialization via
	rtems_bsdnet_initialize_network().

2010-12-03	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac, posix/src/signal_2.c: sighandler_t is defined
	conditionally in some versions of newlib and unconditionally in
	others. Make sure we always compile.

2010-11-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/src/newlibc_exit.c, score/src/threadhandler.c: Revert
	previous commit due to too many broken linker command files.  The
	HAVE_INITFINI_ARRAY is defined for nearly all targets by Newlib, but
	only few linker command files respect this.

2010-11-29	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/src/newlibc_exit.c, score/src/threadhandler.c: Added
	support for .preinit_array, .init_array and .fini_array sections.

2010-11-25	Sebastian Huber <sebastian.huber@embedded-brains.de>
